--- a/tests/ServiceStack.Aws.Tests/ServiceStack.Aws.Tests.csproj
+++ b/tests/ServiceStack.Aws.Tests/ServiceStack.Aws.Tests.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.4.3" />
     <PackageReference Include="AWSSDK.S3" Version="3.3.5.10" />
     <PackageReference Include="AWSSDK.SQS" Version="3.3.1.10" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="NUnit" Version="3.6.1" />
     <ProjectReference Include="..\..\src\ServiceStack.Aws\ServiceStack.Aws.csproj" />
   </ItemGroup>
