--- a/tests/ServiceStack.Aws.Tests/ServiceStack.Aws.Tests.csproj
+++ b/tests/ServiceStack.Aws.Tests/ServiceStack.Aws.Tests.csproj
@@ -18,6 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
     <PackageReference Include="AWSSDK.Core" Version="3.3.17.6" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.4.17" />
     <PackageReference Include="AWSSDK.S3" Version="3.3.10.2" />
