--- a/tests/ServiceStack.Aws.Tests/ServiceStack.Aws.Tests.csproj
+++ b/tests/ServiceStack.Aws.Tests/ServiceStack.Aws.Tests.csproj
@@ -18,9 +18,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
-    <PackageReference Include="NUnit" Version="3.9.0" />
-    <PackageReference Include="AWSSDK.Core" Version="3.3.21" />
+    <PackageReference Include="NUnitLite" Version="3.9.0" />
+    <PackageReference Include="AWSSDK.Core" Version="3.3.21.6" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.5" />
     <PackageReference Include="AWSSDK.S3" Version="3.3.16.2" />
     <PackageReference Include="AWSSDK.SQS" Version="3.3.3.2" />
